general texts revision

--- a/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
@@ -55,7 +55,7 @@
 				
 
              <div class="ui-grid-solo ui-responsive">
-                 <div  class="ui-block-a"><a id="homeButton" href="../pages/home-view.html" data-transition="pop" class="ui-btn ui-shadow">Home</a></div>
+                 <div  class="ui-block-a"><a id="homeButton" href="../pages/home-view.html" data-transition="pop" class="ui-btn ui-shadow">Acceuil</a></div>
              </div>
 				
 			</div>
