Adding change font-size feature

--- a/Kiosk-poc/apps/Kiosk/common/pages/home-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/home-view.html
@@ -4,8 +4,16 @@
 
 	<div data-role="header" id="header" data-position="fixed">
 
-		
+		<div class="right">
+			<a href="#" id="changeSizeAction" class="header-action" > 
+				<img alt="Size" src="../images/header/text-size.png" /> 
+			    <span id="policeSize" class="label">Taille Police</span>
+			</a> 
+			
+		</div>
 		<div class="center with-logo"></div>
+		
+		
 		
 
 	</div>
