--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
@@ -14,7 +14,14 @@
 				<span class="back">Types de crédit</span>
 			</a>
 		</div>
-
+        
+        <div class="right">
+			<a href="#" id="changeSizeAction" class="header-action" > 
+				<img alt="Size" src="../images/header/text-size.png" /> 
+			    <span class="label">Taille Police</span>
+			</a> 
+			
+		</div>
 		
 		
 		<div class="center">
