--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -13,10 +13,16 @@
 			</a>
 		</div>
 
-		
+		<div class="right">
+			<a href="#" id="changeSizeAction" class="header-action" > 
+				<img alt="Size" src="../images/header/text-size.png" /> 
+			    <span class="label">Taille Police</span>
+			</a> 
+			
+		</div>
 		<!--<div class="center with-logo"></div>-->
 		<div class="center">
-			<p class="current-title">Comment voulez-vous utiliser ce crédit ?</p>
+			<p class="current-title">Choisissez un type de crédit</p>
 		</div>
 		
 	</div>
