--- a/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
@@ -12,7 +12,13 @@
 <!-- 				<span class="back">Offres de crédit</span> -->
 <!-- 			</a> -->
 <!-- 		</div> -->
-
+       <div class="right">
+			<a href="#" id="changeSizeAction" class="header-action" > 
+				<img alt="Size" src="../images/header/text-size.png" /> 
+			    <span class="label">Taille Police</span>
+			</a> 
+			
+		</div>
 		
 		
 		<div class="center with-logo"></div>
