--- a/Kiosk-poc/apps/Kiosk/common/pages/home-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/home-view.html
@@ -50,8 +50,8 @@
 					</tbody>
 				</table>
 				
-
-             <div class="ui-grid-a ui-responsive">
+             
+             <div class="ui-grid-a ui-responsive" id="button-div">
                  <div  class="ui-block-a"><a id="go-fr" href="#" class="ui-btn ui-shadow">français</a></div>
                  <div  class="ui-block-b"><a id="go-ar" href="#" class="ui-btn ui-shadow">العربية</a></div>
              </div>
