Better Numerical input validation

--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
@@ -82,7 +82,7 @@
 						<span class="attribute-label">Montant du prêt</span> 
 						<span class="attribute-value">
 
-					<input class="rightText" id="amount" onkeyup=checkAndValidate(this) onchange=loan() data-wrapper-class="ui-custom"type = "number"/>
+					<input class="rightText" id="amount" onkeypress='checkAndValidate(event)' onchange=loan() data-wrapper-class="ui-custom"type = "number"/>
 
 						</span>
 					</p>
