--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -72,7 +72,7 @@
               <h4 class="popup-title">Saisir le montant </h4>
               <div class="popup-content-wrapper">
               <label for="amount">Estimer le montant du crédit</label>
-              <input type="number" value="1000" step="1" min="100" max="50000000" id="amount" value="" placeholder="montant"  required/>
+              <input type="number" value="1000" step="1" min="100" max="50000000" id="amount"   onkeypress='validate(event)' required="required"/>
 
               
 
