--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -22,7 +22,7 @@
 		</div>
 		<!--<div class="center with-logo"></div>-->
 		<div class="center">
-			<p class="current-title">Choisissez le type du crédit</p>
+			<p class="current-title">Choisissez le type de crédit</p>
 		</div>
 		
 	</div>
